kubernetes/nexus/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops-tools
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path:   /
    prometheus.io/port:   '8081'
spec:
  selector:
    app: nexus-server
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
