kubernetes/nexus/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: “true”
    ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - http:
        paths:
          - path: /nexus
            pathType: Prefix
            backend:
              service:
                name: nexus-service
                port:
                  number: 8081
